@@ -1035,17 +1035,17 @@ Muutama standardiasennuksia löytyy täältä:
     <message>
         <location filename="../../src/help.cpp" line="161"/>
         <source>Use broker credentials as session user/password credentials when using broker mode with broker authentication. Currently only affects direct RDP sessions.</source>
-        <translation>Käytä brokerin tunnstautumistietoine kun olet broker-moodissa. Käytössä vain RDP istunnoissa.</translation>
+        <translation>Käytä brokerin tunnus/salasana -tunnistautumistietoja kun olet broker -moodissa.Käytössä vain RDP istunnoissa.</translation>
     </message>
     <message>
         <location filename="../../src/help.cpp" line="162"/>
         <source>Use a custom/branded background image (SVG format) for X2Go Client&apos;s main window. If a directory is given, will randomly pick an SVG file inside of it.</source>
-        <translation>Käytä räätälöitya taustakuvaa (SVG) X2Go-clientissä. Jos hakemisto annettu, käytetään satunnaisesti löydettyä kuvaa sen sijasta.</translation>
+        <translation>Käytä räätälöitya taustakuvaa (SVG) X2Go -clientissä. Jos hakemisto annettu, käytetään satunnaisesti löydettyä kuvaa sen sijasta.</translation>
     </message>
     <message>
         <location filename="../../src/help.cpp" line="163"/>
         <source>Use a custom icon (SVG format) for additional branding to replace the default in the lower left corner of X2Go Client&apos;s main window.</source>
-        <translation>Käytä omaa ikonia (SVG) oletuksen sijasta X2Go-clientin ikkunaan alakulmassa.</translation>
+        <translation>Käytä omaa ikonia (SVG) oletuksen sijasta X2Go -clientin ikkunaan alakulmassa.</translation>
     </message>
 </context>
 <context>
@@ -1902,6 +1902,16 @@ Halutako keskeyttää?
         <translation>Toimivaa työpöytää ei löydy.</translation>
     </message>
     <message>
+        <location filename="../../src/onmainwindow.cpp" line="5012"/>
+        <source>Your current color depth is different from the session&apos;s color depth. This may cause problems reconnecting to this session and in most cases &lt;b&gt;you will lose the session&lt;/b&gt; and have to start a new one! </source>
+        <translation>Värikartta poikkaa istunnon kartasta. Se voi aiheuttaa ongellmia ja useimmiten &lt;b&gt;istunto katkeaa&lt;/b&gt; ja joudut aloittamaan alusta! </translation>
+    </message>
+    <message>
+        <location filename="../../src/onmainwindow.cpp" line="6155"/>
+        <source>Failed to start RDP or XDMCP client</source>
+        <translation>RDP tai XDMCP-clientin käynnistys epäonnistui</translation>
+    </message>
+    <message>
         <source>Your current color depth is different from the session&apos;s color depth. This may cause problems reconnecting to this session and in most cases &lt;b&gt;you will loose the session&lt;/b&gt; and have to start a new one! It&apos;s highly recommended to change the color depth of your display to </source>
         <translation type="obsolete">Työasemasi näytön väripaletti on eri kuin istunnon paletti. Tästä voi aiheutua ongelmia istunnon aikana ja useimmiten &lt;b&gt;istuntosi katoaa&lt;/b&gt; ja joudut käynnistämään uuden! On erittäin suotavaa että vaihdat näyttösi väripaletin arvoon </translation>
     </message>
@@ -1910,16 +1920,15 @@ Halutako keskeyttää?
         <translation type="obsolete"> bittiä ja käynnistät X.Org-ohjelman ennenkuin yhdistät uudelleen tähän X2Go istuntoon.&lt;br /&gt;Haluatko kuitenkin jatkaa tätä istuntoa?</translation>
     </message>
     <message>
-        <location filename="../../src/onmainwindow.cpp" line="5012"/>
-        <source>Your current color depth is different from the session&apos;s color depth. This may cause problems reconnecting to this session and in most cases &lt;b&gt;you will lose the session&lt;/b&gt; and have to start a new one! </source>
-        <translation>Värikartta poikkaa istunnon kartasta. Se voi aiheuttaa ongellmia ja useimmiten &lt;b&gt;istunto katkeaa&lt;/b&gt; ja joudut aloittamaan alusta! </translation>
+        <source>Your current color depth is different from the session&apos;s color depth. This may cause problems reconnecting to this session and in most cases &lt;b&gt;you will loose the session&lt;/b&gt; and have to start a new one! </source>
+        <translation type="obsolete">Värikartta poikkaa istunnon kartasta. Se voi aiheuttaa ongellmia ja useimmiten &lt;b&gt;istunto katkeaa&lt;/b&gt; ja joudut aloittamaan alusta! </translation>
     </message>
     <message numerus="yes">
         <location filename="../../src/onmainwindow.cpp" line="5017"/>
         <source>It&apos;s highly recommended to change the color depth of your display to %n bit(s) and restart your X.Org Server before you reconnect to this X2Go session.</source>
         <comment>%n will be replaced with a number</comment>
         <translation>
-            <numerusform>Vaihda värikartta näytölläsi %n bittiseksi ja käynnistä X.Org-server uudelleen ennenkuin käynnistät X2Go-istunnon.</numerusform>
+            <numerusform>Vaihda värikartta näytölläsi %n -bittiseksi ja käynnistä X.Org server uudelleen ennenkuin käynnistät uudelleen X2Go -istunnon.</numerusform>
             <numerusform></numerusform>
         </translation>
     </message>
@@ -2028,14 +2037,13 @@ File a bug report as outlined on the &lt;a href=&quot;http://wiki.x2go.org/doku.
 Lähetä virheraportti kuten ohjeistettu sivulla &lt;a href=&quot;http://wiki.x2go.org/doku.php/wiki:bugs&quot;&gt;bugs wiki page&lt;/a&gt;.</translation>
     </message>
     <message>
-        <location filename="../../src/onmainwindow.cpp" line="6155"/>
-        <source>Failed to start RDP or XDMCP client</source>
-        <translation>RDP tai XDMCP-clientin käynnistys epäonnistui</translation>
+        <source>Failed to start RDP or XMDCP client</source>
+        <translation type="obsolete">RDP tai XMDCP-clientin käynnistys epäonnistui</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6156"/>
         <source>Check session settings and ensure that selected client is installed on your system.</source>
-        <translation>Tarkista istunnon asetukset ja varmista että client-ohjelma on asennettu työasemaasi.</translation>
+        <translation>Tarkista istunnon asetukset ja varmista että client -ohjelma on asennettu työasemaasi.</translation>
     </message>
     <message>
         <location filename="../../src/onmainwindow.cpp" line="6256"/>
@@ -4123,7 +4131,7 @@ Käytätkö X2Go-ohjelmaa piilomoodissa?</translation>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="87"/>
         <source>Values ranging from &lt;b&gt;0&lt;/b&gt; to &lt;b&gt;65535&lt;/b&gt; are allowed.&lt;br /&gt;A value of &lt;b&gt;0&lt;/b&gt; will either use the port specified in the SSH configuration file belonging to a host or shortname, or use the default of &lt;b&gt;22&lt;/b&gt;.</source>
-        <translation>Arvot väliltä &lt;b&gt;0&lt;/b&gt; to &lt;b&gt;65535&lt;/b&gt; ovat sallittuja.&lt;br /&gt;Arvo &lt;b&gt;0&lt;/b&gt; käyttää joko SSH-asetuksen arvoa, tai oletusta &lt;b&gt;22&lt;/b&gt;.</translation>
+        <translation>Arvot väliltä &lt;b&gt;0&lt;/b&gt; - &lt;b&gt;65535&lt;/b&gt; ovat sallittuja.&lt;br /&gt;Arvo &lt;b&gt;0&lt;/b&gt; käyttää joko SSH -asetuksen arvoa , tai oletusta &lt;b&gt;22&lt;/b&gt;.</translation>
     </message>
     <message>
         <location filename="../../src/sessionwidget.cpp" line="122"/>
