@@ -271,6 +271,7 @@ x2goclient (4.1.1.0-0x2go1) UNRELEASED; urgency=medium
   * New upstream version (4.1.1.0):
     - res/i18n/x2goclient_fi.ts: update Finnish translation file.
     - res/i18n/x2goclient_fi.ts: update Finnish translation file.
+    - res/i18n/x2goclient_fi.ts: update Finnish translation file.
 
   [ Mike DePaulo ]
   * New upstream version (4.1.1.0):
